--- a/serviceloader/importer/templates/importer/index.html
+++ b/serviceloader/importer/templates/importer/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+.myDiv {
+  border: 5px outset red;
+  background-color: lightblue;
+  text-align: center;
+}
+</style>
 <head>
     <meta charset="UTF-8">
     <title>Service Configuration</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 <body>
-    <p>Input your Service Confiuration</p>
-    <form action="" method="post">
+<div class="container">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+        <h1 class="display-4">Input your Service Configuration</h1>
+
+        </div>
+    </div>
+
+    {% if error_message %}<div class="myDiv"><p><strong>{{ error_message }}</strong></p></div>{% endif %}
+
+    <form action="{% url 'importer:selections' %}" method="post">
         {% csrf_token %}
-        <p>Select Country Name</p>
-        <input type="text" name="Country" value="Country">
-        <p>Select AreaTypeCode</p>
-        <input type="text" name="AreaTypeCode" value="AreaTypeCode">
-        <p>Select Model</p>
-        {% for choice in latest_question_list %}
-            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.name }}">
-            <label for="choice{{ forloop.counter }}">{{ choice.name }}</label><br>
-        {% endfor %}
-        <p></p>
+        {{ form.as_p }}
         <input type="submit" value="Submit">
     </form>
-
+</div>
 </body>
 </html>
